--- a/examples/jupyter_notebook/nn_ad_benchmarking/configs/hdfs_logbert_config.yaml
+++ b/examples/jupyter_notebook/nn_ad_benchmarking/configs/hdfs_logbert_config.yaml
@@ -6,9 +6,9 @@
 ##
 ##
 workflow_config:  
-  label_filepath: "../../datasets/HDFS_AD/anomaly_label.csv"
+  label_filepath: "/Users/mohit.gurnani/.dataset/hdfs/anomaly_label.csv"
   parse_logline: False  
-  output_dir: "temp_output"
+  output_dir: "/Users/mohit.gurnani/projects/logai/examples/jupyter_notebook/nn_ad_benchmarking/temp_output"
   output_file_type: "csv"
   training_type: "unsupervised"
   deduplicate_test: True
@@ -16,7 +16,7 @@ workflow_config:
   dataset_name: hdfs
 
   data_loader_config:
-    filepath: "../../datasets/HDFS_AD/HDFS_5k.log"
+    filepath: "/Users/mohit.gurnani/.dataset/hdfs/HDFS.log"
     reader_args: 
       log_format: "<Date> <Time> <Pid> <Level> <Component> <Content>"
     log_type: "log"
@@ -43,7 +43,8 @@ workflow_config:
     parsing_algo_params: 
       sim_th: 0.5
       depth: 5
-    
+
+
   open_set_partitioner_config:
     session_window: True
     sliding_window: -1
@@ -56,18 +57,19 @@ workflow_config:
       model_name: "bert-base-cased"
       max_token_len: 384
       custom_tokens: ["BLOCK", "IP", "HEX", "INT"]
-      output_dir: "temp_output/HDFS_5k_parsed_session_unsupervised_AD"
+      output_dir: "/Users/mohit.gurnani/projects/logai/examples/jupyter_notebook/nn_ad_benchmarking/temp_output/HDFS_1.5G_parsed_session_unsupervised_AD"
       tokenizer_dirname: "logbert_tokenizer"
 
   nn_anomaly_detection_config:
       algo_name: "logbert"
       algo_params:
+          pretrain_from_scratch: False
           model_name: "bert-base-cased"
           learning_rate: 0.0001
           num_train_epochs: 10
           per_device_train_batch_size: 4
           save_steps: 50
           mask_ngram: 8
-          tokenizer_dirpath: "temp_output/HDFS_5k_parsed_session_unsupervised_AD/bert-base-cased_tokenizer"
-          output_dir: "temp_output/HDFS_5k_parsed_session_unsupervised_AD"
+          tokenizer_dirpath: "/Users/mohit.gurnani/projects/logai/examples/jupyter_notebook/nn_ad_benchmarking/temp_output/HDFS_1.5G_parsed_session_unsupervised_AD/bert-base-cased_tokenizer"
+          output_dir: "/Users/mohit.gurnani/projects/logai/examples/jupyter_notebook/nn_ad_benchmarking/temp_output/HDFS_1.5G_parsed_session_unsupervised_AD"
 
